Fixed issues with labels not showing when too long

--- a/web/css/bank.css
+++ b/web/css/bank.css
@@ -81,7 +81,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3ffffff', e
 .bank .tabContainer {border-bottom: 2px #005190 solid; }
 .bank h3 {display:block; color:#ffffff; font-size: 1em; border:none; text-decoration:none; width:98%;}
 #callSelectorLink {display: inline-block; width:32px; height:32px; background: transparent url("../images/addLayers.png"); margin-left: 50px;float:right;}
-.bank div,.bank ul {display:block;width:100%; margin:0 auto;}
+.bank div,.bank ul {
+    display:block;
+    width:100%;
+    margin:0 auto;
+    overflow: auto;
+}
 .bank .category {overflow:hidden;}
 .bank h3 {background: none; padding: 1px 3px; font-size:0.9em; margin-top:10px; margin-left:2%;text-transform:uppercase;}
 .bank li.item {
